fix: wrong z-index of book header

--- a/src/comment.less
+++ b/src/comment.less
@@ -465,9 +465,11 @@
 
 /** take up GitBook styles */
 .book {
-    .navigation,
-    .book-header {
+    .navigation {
         z-index: 3;
+    }
+    .book-header {
+        z-index: 4;
     }
 
     .CodeMirror,
